fixed text alignment on mobile

--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -29,6 +29,7 @@
 @include responsive(40.063em) {
   .intro {
     padding: .65em 0 2.5em 0;
+    text-align: center;
 
       h1 {
         line-height: 1;
